--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "new-start-gulp",
+  "name": "gulp-start",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Al Tsaplin",
+  "author": "Vadym Prokopchuk",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.14",
+    "browser-sync": "^2.26.13",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-concat": "^2.6.1",
-    "gulp-sass": "^4.1.0",
-    "gulp-uglify": "^3.0.2",
-    "jquery": "^3.6.0"
-  },
-  "dependencies": {
     "gulp-imagemin": "^7.1.0",
-    "slick-slider": "^1.8.2"
+    "gulp-sass": "^4.1.0",
+    "gulp-uglify-es": "^2.0.0",
+    "jquery": "^3.5.1"
   }
 }
