--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "gulp-start",
+  "name": "wawe",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Vadym Prokopchuk",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alienat3d/wawe.git"
+  },
+  "author": "Al Tsaplin",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/alienat3d/wawe/issues"
+  },
+  "homepage": "https://github.com/alienat3d/wawe#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.13",
-    "del": "^6.0.0",
+    "browser-sync": "^3.0.2",
+    "del": "^6.1.1",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-uglify-es": "^2.0.0",
-    "jquery": "^3.5.1"
+    "gulp-imagemin": "7.1",
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify": "^3.0.2",
+    "sass": "^1.69.7",
+    "normalize.css": "^8.0.1"
   }
 }
